--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif;  */
+  font-family: 'Hind', sans-serif;
+
 }
